--- a/app/src/main/res/layout/card_main_menu_item.xml
+++ b/app/src/main/res/layout/card_main_menu_item.xml
@@ -4,8 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="300dp"
-    android:layout_width="200dp"
+    android:layout_height="350dp"
+    android:layout_width="250dp"
     android:id="@+id/card_main_menu_item"
     android:layout_marginRight="5dp"
     android:layout_marginEnd="5dp"
@@ -23,11 +23,13 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/meni_item_image"
-            android:src="@drawable/haarlem_cathedral2"
+            android:id="@+id/menu_item_image"
+            android:alpha="0.3"
+            android:src="@drawable/haarlem_cathsmall"
             android:scaleType="centerCrop"
-            android:background="@drawable/rounded_corners"
-            android:alpha="0.6"
+
+
+
             />
 
         <TextView
@@ -41,7 +43,8 @@
             android:background="@color/card_view_text_background"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:alpha="0.5"/>
 
 
     </RelativeLayout>
