--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="background_center">#363535</color>
+    <color name="background_edge">#0b0b0b</color>
     <color name="card_view_text_background">#7dd0d0d0</color>
     <color name="transparent">#00000000</color>
 </resources>
