--- a/app/src/main/res/layout/card_main_menu_small_icon.xml
+++ b/app/src/main/res/layout/card_main_menu_small_icon.xml
@@ -4,9 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="290dp"
-    android:layout_width="230dp"
-    android:id="@+id/card_main_menu_item"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:id="@+id/card_main_menu_item_small"
+    android:layout_marginRight="5dp"
+    android:layout_marginLeft="5dp"
     card_view:cardUseCompatPadding="true"
     card_view:cardBackgroundColor="@color/transparent"
     >
@@ -22,29 +24,27 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/menu_item_image"
-            android:alpha="0.3"
+            android:alpha="0.5"
             android:src="@drawable/haarlem_cathsmall"
             android:scaleType="centerCrop"
-
-
-
             />
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:gravity="center"
             android:background="@color/card_view_text_background"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:alpha="0.5"/>
+
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="40dp"
             android:id="@+id/menu_item_title"
             android:text="Restaurants"
             android:textColor="#000"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:gravity="center"
             android:background="@color/transparent"
             android:layout_alignParentBottom="true"
@@ -52,12 +52,7 @@
             android:layout_alignParentStart="true"
             android:alpha="1"/>
 
-
-
     </RelativeLayout>
-
-
-
 
 
 </android.support.v7.widget.CardView>
