--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="background_center">#363535</color>
-    <color name="background_edge">#0b0b0b</color>
+    <color name="background_center">#636363</color>
+    <color name="background_edge">#03001d</color>
     <color name="card_view_text_background">#7dd0d0d0</color>
     <color name="transparent">#00000000</color>
 </resources>
