--- a/app/src/main/res/layout/fragment_map_fragment_main.xml
+++ b/app/src/main/res/layout/fragment_map_fragment_main.xml
@@ -12,7 +12,7 @@
         android:layout_margin="5dp"
         mapbox:center_latitude="51.5032520"
 
-        mapbox:style_url="@string/style_emerald"
+        mapbox:style_url="@string/map_style"
         mapbox:center_longitude="-0.1278990"
         >
 
