--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="background_edge">#03001d</color>
     <color name="card_view_text_background">#7dd0d0d0</color>
     <color name="transparent">#00000000</color>
+    <color name="dark_text">#131313</color>
+    <color name="white_text">#FFF</color>
 </resources>
