--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -11,45 +11,76 @@
     tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.activties.MainActivity">
 
 
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/relative_layout"
+        >
+
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/app_bar_layout"
+            android:minHeight="?attr/actionBarSize"
+            android:background="@color/transparent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+                app:layout_scrollFlags="scroll|enterAlways"
+
+                android:weightSum="1">
+
+                <ImageView
+                    app:srcCompat="@drawable/logo"
+                    android:id="@+id/imageView"
+                    android:maxWidth="100dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp" />
+
+            </android.support.v7.widget.Toolbar>
+
+
+        </android.support.design.widget.AppBarLayout>
+    </RelativeLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_frame"
-        android:layout_below="@+id/app_bar_layout">
+        android:layout_below="@+id/relative_layout"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp">
 
     </FrameLayout>
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/app_bar_layout"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@color/transparent"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:weightSum="1"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
+        android:layout_height="match_parent"
+        android:id="@+id/shade_frame"
+        android:background="@color/my_black"
+        android:alpha="0.0">
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/transparent"
-            app:layout_scrollFlags="scroll|enterAlways"
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/display_attraction_card_frame"
+        android:layout_margin="20dp"
+
 
         >
 
-            <ImageView
-                android:layout_height="85dp"
-                app:srcCompat="@drawable/logo"
-                android:id="@+id/imageView"
-                android:maxWidth="100dp"
-                android:layout_width="300dp"
-                />
+    </FrameLayout>
 
-        </android.support.v7.widget.Toolbar>
-
-
-    </android.support.design.widget.AppBarLayout>
 </RelativeLayout>
