--- a/app/src/main/res/layout/card_attraction_mini.xml
+++ b/app/src/main/res/layout/card_attraction_mini.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="130dp"
+    android:layout_height="65dp"
     android:layout_width="match_parent">
 
     <LinearLayout
@@ -11,7 +11,7 @@
         android:orientation="horizontal"
         android:weightSum="100">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:orientation="vertical"
@@ -21,72 +21,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/mini_title_text"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:textSize="26sp"
+                android:textSize="21sp"
                 android:text="Jopen"
                 android:textColor="#000"
                 android:layout_marginBottom="5dp"/>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                >
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="8dp">
 
                 <TextView
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/title_attrib"
-                    android:textSize="15sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp"
-                    />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/content_attrib"
-                    android:textSize="18sp"/>
-
-
-            </LinearLayout>
-
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                >
-
-                <TextView
-                    android:layout_width="80dp"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/title_description"
-                    android:textSize="15sp"
+                    android:id="@+id/attribute_title_text"
+                    android:textSize="14sp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:text="@string/descriptor_description"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/content_description"
-                    android:textSize="18sp"/>
+                    android:id="@+id/attribute_contents_text"
+                    android:textSize="14sp"/>
 
 
             </LinearLayout>
 
-        </LinearLayout>
+        </RelativeLayout>
         <LinearLayout
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/dark_text"
+            android:background="@color/seperating_lines"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp">
         </LinearLayout>
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="35"
@@ -96,21 +73,22 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/distance_title"
-                android:layout_marginTop="25dp"
-                android:textSize="16sp"
+                android:layout_marginTop="10dp"
+                android:textSize="14sp"
                 android:gravity="center"
                 android:text="@string/distance_from"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="8dp"
                 android:id="@+id/distance_content"
-                android:text="Unknown"
-                android:textSize="20dp"
-                android:gravity="center"/>
+                android:text="@string/unknown_distance"
+                android:textSize="19sp"
+                android:gravity="center"
+                />
 
-        </LinearLayout>
+        </RelativeLayout>
 
 
 
