--- a/app/src/main/res/layout/fragment_show_category.xml
+++ b/app/src/main/res/layout/fragment_show_category.xml
@@ -7,58 +7,57 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_alignParentTop="true"
         android:layout_above="@+id/linearLayout2"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/rounded_corners"
-        android:backgroundTint="@android:color/holo_red_dark">
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/background_transparent_white_outline_rounded_corners">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:id="@+id/title_text"
+            android:textColor="@color/white_text"
+            android:textSize="22sp"/>
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/show_attractions"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_below="@+id/title_text">
+
+        </FrameLayout>
     </RelativeLayout>
 
-    <TextView
-        android:text="TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:id="@+id/title_text"
-        android:textColor="@color/white_text"
-        android:textSize="22sp"/>
-
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/show_attractions"
-        android:layout_below="@+id/title_text"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_above="@+id/linearLayout2">
-
-    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="2"
+        android:id="@+id/linearLayout2"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/linearLayout2">
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:layout_marginStart="5dp">
+            android:layout_marginLeft="5dp">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,31 +87,63 @@
                     android:id="@+id/by_distance_radio"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:textColor="@color/white_text"/>
+                    android:textColor="@color/white_text"
+                    android:enabled="false"
+                    android:nestedScrollingEnabled="false" />
 
             </RadioGroup>
 
 
         </LinearLayout>
-        <RelativeLayout
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:weightSum="2"
+            android:orientation="vertical"
+            android:gravity="right"
+            >
 
             <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="135dp"
+                android:layout_height="0dp"
                 android:id="@+id/map_view_button"
                 android:text="@string/on_map_button"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="10dp"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="5dp"
+                android:gravity="center_vertical"
+                android:drawableRight="@android:drawable/ic_dialog_map"
+                android:textSize="12sp"
+                android:drawablePadding="10dp"
+                android:background="@drawable/background_transparent_white_outline_rounded_corners"
+                android:paddingLeft="10dp"
+                android:layout_weight="1"
+                android:paddingRight="5dp"
+                android:textColor="@color/white_text"
+ />
+
+            <Button
+                android:text="@string/refresh"
+                android:layout_width="135dp"
+                android:layout_height="0dp"
+                android:layout_weight="0.94"
+                android:layout_marginRight="5dp"
+                android:layout_marginEnd="5dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:paddingStart="10dp"
+                android:drawableRight="@drawable/quantum_ic_refresh_white_24"
+                android:drawableEnd="@drawable/quantum_ic_refresh_white_24"
+                android:drawablePadding="10dp"
+                android:id="@+id/refresh_button"
+                android:paddingRight="5dp"
+                android:paddingEnd="5dp"
+                android:textColor="@color/white_text"
+                android:background="@drawable/background_transparent_white_outline_rounded_corners" />
 
 
-        </RelativeLayout>
-
+        </LinearLayout>
 
 
     </LinearLayout>
