--- a/app/src/main/res/layout/seperating_line.xml
+++ b/app/src/main/res/layout/seperating_line.xml
@@ -2,11 +2,14 @@
 <View xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="1dp"
+    android:layout_height="2dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
+    android:background="@color/seperating_lines"
     >
+
+
 
 </View>
