main admin page setup, themes updated, images load correctly

--- a/app/src/main/res/layout/layout_no_content.xml
+++ b/app/src/main/res/layout/layout_no_content.xml
@@ -10,7 +10,8 @@
         android:id="@+id/textView"
         android:gravity="center"
         android:textSize="18sp"
-        android:textColor="@color/white_text"/>
+        android:textColor="@color/white_text"
+        android:layout_marginTop="20dp"/>
     <TextView
         android:text="Please check internet connection"
         android:layout_width="match_parent"
