--- a/app/src/main/res/layout/card_attraction_mini.xml
+++ b/app/src/main/res/layout/card_attraction_mini.xml
@@ -44,11 +44,13 @@
                     android:textSize="14sp"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
+                    android:textColor="#000"
                     android:text="@string/descriptor_description"/>
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/attribute_contents_text"
+                    android:textColor="#000"
                     android:textSize="14sp"/>
 
 
@@ -76,6 +78,7 @@
                 android:layout_marginTop="10dp"
                 android:textSize="14sp"
                 android:gravity="center"
+                android:textColor="#000"
                 android:text="@string/distance_from"/>
             <TextView
                 android:layout_width="match_parent"
@@ -85,6 +88,7 @@
                 android:id="@+id/distance_content"
                 android:text="@string/unknown_distance"
                 android:textSize="19sp"
+                android:textColor="#000"
                 android:gravity="center"
                 />
 
