--- a/app/src/main/res/layout/fragment_map_fragment_main.xml
+++ b/app/src/main/res/layout/fragment_map_fragment_main.xml
@@ -6,20 +6,52 @@
     tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.fragments.MapFragmentMain">
 
     <com.mapbox.mapboxsdk.maps.MapView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/map_view"
         android:layout_margin="5dp"
         mapbox:center_latitude="51.5032520"
-
         mapbox:style_url="@string/map_style"
         mapbox:center_longitude="-0.1278990"
         >
 
+
     </com.mapbox.mapboxsdk.maps.MapView>
 
+    <TextView
+        android:text="Click map to set location"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/map_view_instructions"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:textColor="@color/white_text"
+        />
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="40dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginEnd="8dp"
+        android:id="@+id/set_to_current_location_button"
+        android:src="@drawable/location_icon"
+        android:background="@drawable/background_transparent_white_outline_rounded_corners"
+        />
 
-
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:text="Done"
+        android:id="@+id/coord_selector_done_button"/>
 
 </RelativeLayout>
