--- a/app/src/main/res/layout/fragment_show_category.xml
+++ b/app/src/main/res/layout/fragment_show_category.xml
@@ -18,11 +18,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
+            android:layout_marginStart="40dp"
+            android:layout_marginLeft="40dp"
             android:layout_marginTop="8dp"
             android:id="@+id/title_text"
             android:textColor="@color/white_text"
             android:textSize="22sp"/>
+
+        <Button
+            android:layout_width="133dp"
+            android:layout_height="40dp"
+            android:text="Make Suggestion"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
+            android:id="@+id/make_suggestion_button"
+            android:textColor="@color/white_text"
+            android:background="@drawable/background_transparent_white_outline_rounded_corners"
+            android:textSize="12sp"/>
 
         <FrameLayout
             android:layout_width="match_parent"
@@ -36,7 +51,8 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:layout_below="@+id/title_text">
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/make_suggestion_button">
 
         </FrameLayout>
     </RelativeLayout>
