--- a/app/src/main/res/layout/layout_image_view.xml
+++ b/app/src/main/res/layout/layout_image_view.xml
@@ -13,6 +13,7 @@
         android:layout_marginRight="5dp"
         android:layout_marginEnd="5dp"
         android:layout_gravity="center"
-        android:contentDescription="meh"/>
+        android:contentDescription="meh"
+        android:id="@+id/image_thumbnail"/>
 
 </LinearLayout>
