--- a/app/src/main/res/layout/fragment_map_fragment_main.xml
+++ b/app/src/main/res/layout/fragment_map_fragment_main.xml
@@ -26,7 +26,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:textColor="@color/white_text"
+        android:textColor="@color/white_color"
         />
     <ImageButton
         android:layout_width="50dp"
