--- a/app/src/main/res/layout/separating_line_white.xml
+++ b/app/src/main/res/layout/separating_line_white.xml
@@ -7,7 +7,7 @@
     android:layout_marginRight="5dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="5dp"
-    android:background="@color/white_text"
+    android:background="@color/white_color"
     android:id="@+id/sep_line_view"
     >
 
