--- a/app/src/main/res/drawable/location_icon.xml
+++ b/app/src/main/res/drawable/location_icon.xml
@@ -3,7 +3,7 @@
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="oval">
-            <solid android:color="@color/white_text"/>
+            <solid android:color="@color/white_color"/>
             <size
                 android:height="15dp"
                 android:width="15dp"/>
