--- a/app/src/main/res/layout/fragment_attraction_edit_selector.xml
+++ b/app/src/main/res/layout/fragment_attraction_edit_selector.xml
@@ -5,20 +5,38 @@
     android:orientation="vertical"
     tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.fragments.AttractionEditSelector">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        android:id="@+id/attraction_edit_selector_title"
-        android:text="@string/attraction_edit_selector_title" />
-
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="300dp"
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="330dp"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:id="@+id/recycler_attraction_generic"
-        android:layout_marginBottom="10dp">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/background_transparent_white_outline_rounded_corners">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:id="@+id/attraction_edit_selector_title"
+            android:text="@string/attraction_edit_selector_title"
+            android:textColor="@color/white_color"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/recycler_attraction_generic"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginEnd="15dp">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
+
 </LinearLayout>
