--- a/app/src/main/res/layout/layout_attribute_edit.xml
+++ b/app/src/main/res/layout/layout_attribute_edit.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/attribute_title1"
         android:layout_marginTop="5dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginLeft="5dp"
         />
 
     <EditText
@@ -21,9 +23,9 @@
         android:inputType="text"
         android:imeOptions="actionNext"
         android:layout_marginTop="5dp"
-        android:background="@color/edittext_background"
-        android:alpha="0.2"
+        android:background="@color/edittext_background_low_alpha"
         android:layout_marginBottom="15dp"
+
     />
 
 
