--- a/app/src/main/res/layout/layout_image_view.xml
+++ b/app/src/main/res/layout/layout_image_view.xml
@@ -3,17 +3,16 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background_center">
+    android:background="@color/light_grey"
+    android:layout_marginBottom="5dp">
 
     <ImageView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginEnd="5dp"
+        android:layout_height="wrap_content"
+        android:maxHeight="300dp"
         android:layout_gravity="center"
         android:contentDescription="meh"
-        android:id="@+id/image_thumbnail"/>
+        android:id="@+id/image_thumbnail"
+        android:adjustViewBounds="true"/>
 
 </LinearLayout>
