--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:buttonStyle">@style/ButtonStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
+        <item name="editTextStyle">@style/EditTextStyle</item>
+        <item name="android:checkboxStyle">@style/CheckButtonStyle</item>
 
 
     </style>
@@ -17,7 +19,6 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
 
 
@@ -30,13 +31,27 @@
 
     <style name="ButtonStyle" parent="android:Widget.Button">
         <item name="android:background">@drawable/background_transparent_white_outline_rounded_corners</item>
-        <item name="android:textColor">#fff</item>
-
+        <item name="android:textColor">@color/white_color</item>
     </style>
 
     <style name="TextViewStyle" parent="android:Widget.TextView">
-        <item name="android:textColor">#fff</item>
+        <item name="android:textColor">@color/white_color</item>
+
     </style>
+
+    <style name="EditTextStyle" parent="android:Widget.EditText">
+        <item name="android:textColor">@color/white_color</item>
+        <item name="android:textColorHint">@color/white_medium_alpha</item>
+
+    </style>
+
+   <style name="CheckButtonStyle" parent="android:Widget.CompoundButton.CheckBox">
+       <item name="android:textColor">@color/white_color</item>
+
+
+
+
+   </style>
 
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
