--- a/app/src/main/res/drawable/spash_drawable.xml
+++ b/app/src/main/res/drawable/spash_drawable.xml
@@ -6,13 +6,31 @@
     </item>
     <item>
         <bitmap
-            android:src="@drawable/haarlem_cathsmall"
+            android:src="@drawable/haarlem_cath1"
             android:gravity="center">
 
         </bitmap>
 
-
     </item>
+
+    <item
+        android:height="74dp"
+        android:width="280dp"
+        android:start="15dp"
+        android:left="15dp"
+        android:right="20dp"
+        android:end="20dp"
+        android:top="80dp"
+        >
+        <bitmap
+            android:src="@drawable/logo"
+            android:alpha="0.8">
+
+        </bitmap>
+    </item>
+
+
+
 
 
 </layer-list>
