--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main_menu"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_album2"
     android:theme="@style/AppTheme"
+    android:background="@drawable/background_color_fade"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background_color_fade"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.activties.MainActivity">
-
-
-
+    tools:context="com.example.tonyquick.thequicklawsonguidetohaarlem.activties.AlbumActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/relative_layout"
+        android:id="@+id/relative_layout_appbar"
         >
 
         <android.support.design.widget.AppBarLayout
@@ -27,6 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:weightSum="1"
+            android:layout_marginTop="5dp"
             android:theme="@style/AppTheme.AppBarOverlay"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -57,10 +53,8 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/main_frame"
-        android:layout_below="@+id/relative_layout"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp">
+        android:layout_below="@id/relative_layout_appbar"
+        android:id="@+id/main_content_frame">
 
     </FrameLayout>
 
@@ -76,12 +70,13 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/display_attraction_card_frame"
         android:layout_margin="20dp"
-
-
-        >
+        android:id="@+id/secondary_content_frame">
 
     </FrameLayout>
+
+
+
+
 
 </RelativeLayout>
