--- a/app/src/main/res/layout/fragment_show_category.xml
+++ b/app/src/main/res/layout/fragment_show_category.xml
@@ -122,41 +122,40 @@
             >
 
             <Button
+                android:id="@+id/map_view_button"
                 android:layout_width="135dp"
                 android:layout_height="0dp"
-                android:id="@+id/map_view_button"
-                android:text="@string/on_map_button"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="5dp"
-                android:gravity="center_vertical"
-                android:drawableRight="@android:drawable/ic_dialog_map"
-                android:textSize="12sp"
-                android:drawablePadding="10dp"
-                android:background="@drawable/background_transparent_white_outline_rounded_corners"
-                android:paddingLeft="10dp"
                 android:layout_weight="1"
+                android:background="@drawable/background_transparent_white_outline_rounded_corners"
+                android:drawablePadding="10dp"
+                android:drawableRight="@android:drawable/ic_menu_mapmode"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
                 android:paddingRight="5dp"
+                android:text="@string/on_map_button"
                 android:textColor="@color/white_color"
- />
+                android:textSize="12sp" />
 
             <Button
-                android:text="@string/refresh"
+                android:id="@+id/refresh_button"
                 android:layout_width="135dp"
                 android:layout_height="0dp"
-                android:layout_weight="0.94"
-                android:layout_marginRight="5dp"
                 android:layout_marginEnd="5dp"
-                android:gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingStart="10dp"
-                android:drawableRight="@drawable/quantum_ic_refresh_white_24"
-                android:drawableEnd="@drawable/quantum_ic_refresh_white_24"
+                android:layout_marginRight="5dp"
+                android:layout_weight="0.94"
+                android:background="@drawable/background_transparent_white_outline_rounded_corners"
+                android:drawableEnd="@android:drawable/ic_menu_rotate"
                 android:drawablePadding="10dp"
-                android:id="@+id/refresh_button"
-                android:paddingRight="5dp"
+                android:drawableRight="@android:drawable/ic_menu_rotate"
+                android:gravity="center_vertical"
                 android:paddingEnd="5dp"
-                android:textColor="@color/white_color"
-                android:background="@drawable/background_transparent_white_outline_rounded_corners" />
+                android:paddingLeft="10dp"
+                android:paddingRight="5dp"
+                android:paddingStart="10dp"
+                android:text="@string/refresh"
+                android:textColor="@color/white_color" />
 
 
         </LinearLayout>
